// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkflowIllustration.vue > should render even with one state 1`] = `
<div
  class="v-card v-theme--light v-card--density-default elevation-6 v-card--variant-elevated mx-auto pa-5"
>
  <!---->
  <div
    class="v-card__loader"
  >
    <div
      aria-hidden="true"
      aria-valuemax="100"
      aria-valuemin="0"
      class="v-progress-linear v-theme--light v-locale--is-ltr"
      role="progressbar"
      style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
    >
      <!---->
      <div
        class="v-progress-linear__background"
      />
      <div
        class="v-progress-linear__buffer"
        style="width: 0%;"
      />
      <transition-stub
        appear="false"
        css="true"
        name="fade-transition"
        persisted="false"
      >
        <div
          class="v-progress-linear__indeterminate"
        >
          
          <div
            class="v-progress-linear__indeterminate long"
          />
          <div
            class="v-progress-linear__indeterminate short"
          />
          
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  
  <div
    class="v-card-text"
  >
    <div
      class="v-container v-container--fluid v-locale--is-ltr"
    >
      <div
        class="v-row align-center justify-center"
      >
        <div
          align="center"
          class="v-col"
          id="svg-container"
          justify="center"
        >
          <svg
            class="shadow"
            height="NaN"
            width="650"
          >
            <g
              transform="translate(NaN, 20)"
            >
              <g
                class="output"
              >
                <g
                  class="clusters"
                />
                <g
                  class="edgePaths"
                />
                <g
                  class="edgeLabels"
                />
                <g
                  class="nodes"
                >
                  <g
                    class="node node-default"
                    id="state_1"
                    style="opacity: 1;"
                    transform="translate(NaN,NaN)"
                  >
                    <rect
                      class="label-container"
                      height="NaN"
                      rx="5"
                      ry="5"
                      width="NaN"
                      x="NaN"
                      y="NaN"
                    />
                    <g
                      class="label"
                      transform="translate(0,0)"
                    >
                      <g
                        transform="translate(NaN,NaN)"
                      >
                        <text>
                          <tspan
                            dy="1em"
                            space="preserve"
                            x="1"
                          >
                            state-1
                          </tspan>
                        </text>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  
  <!---->
  
  <!---->
  <span
    class="v-card__underlay"
  />
  
</div>
`;

exports[`WorkflowIllustration.vue > should render with more than one state 1`] = `
<div
  class="v-card v-theme--light v-card--density-default elevation-6 v-card--variant-elevated mx-auto pa-5"
>
  <!---->
  <div
    class="v-card__loader"
  >
    <div
      aria-hidden="true"
      aria-valuemax="100"
      aria-valuemin="0"
      class="v-progress-linear v-theme--light v-locale--is-ltr"
      role="progressbar"
      style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
    >
      <!---->
      <div
        class="v-progress-linear__background"
      />
      <div
        class="v-progress-linear__buffer"
        style="width: 0%;"
      />
      <transition-stub
        appear="false"
        css="true"
        name="fade-transition"
        persisted="false"
      >
        <div
          class="v-progress-linear__indeterminate"
        >
          
          <div
            class="v-progress-linear__indeterminate long"
          />
          <div
            class="v-progress-linear__indeterminate short"
          />
          
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  
  <div
    class="v-card-text"
  >
    <div
      class="v-container v-container--fluid v-locale--is-ltr"
    >
      <div
        class="v-row align-center justify-center"
      >
        <div
          align="center"
          class="v-col"
          id="svg-container"
          justify="center"
        >
          <svg
            class="shadow"
            height="NaN"
            width="650"
          >
            <g
              transform="translate(NaN, 20)"
            >
              <g
                class="output"
              >
                <g
                  class="clusters"
                />
                <g
                  class="edgePaths"
                />
                <g
                  class="edgeLabels"
                />
                <g
                  class="nodes"
                >
                  <g
                    class="node node-default"
                    id="state_1"
                    style="opacity: 1;"
                    transform="translate(NaN,NaN)"
                  >
                    <rect
                      class="label-container"
                      height="NaN"
                      rx="5"
                      ry="5"
                      width="NaN"
                      x="NaN"
                      y="NaN"
                    />
                    <g
                      class="label"
                      transform="translate(0,0)"
                    >
                      <g
                        transform="translate(NaN,NaN)"
                      >
                        <text>
                          <tspan
                            dy="1em"
                            space="preserve"
                            x="1"
                          >
                            state-1
                          </tspan>
                        </text>
                      </g>
                    </g>
                  </g>
                  <g
                    class="node node-default"
                    id="state_2"
                    style="opacity: 1;"
                    transform="translate(NaN,NaN)"
                  >
                    <rect
                      class="label-container"
                      height="NaN"
                      rx="5"
                      ry="5"
                      width="NaN"
                      x="NaN"
                      y="NaN"
                    />
                    <g
                      class="label"
                      transform="translate(0,0)"
                    >
                      <g
                        transform="translate(NaN,NaN)"
                      >
                        <text>
                          <tspan
                            dy="1em"
                            space="preserve"
                            x="1"
                          >
                            state-2
                          </tspan>
                        </text>
                      </g>
                    </g>
                  </g>
                  <g
                    class="node node-default"
                    id="state_3"
                    style="opacity: 1;"
                    transform="translate(NaN,NaN)"
                  >
                    <rect
                      class="label-container"
                      height="NaN"
                      rx="5"
                      ry="5"
                      width="NaN"
                      x="NaN"
                      y="NaN"
                    />
                    <g
                      class="label"
                      transform="translate(0,0)"
                    >
                      <g
                        transform="translate(NaN,NaN)"
                      >
                        <text>
                          <tspan
                            dy="1em"
                            space="preserve"
                            x="1"
                          >
                            state-3
                          </tspan>
                        </text>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  
  <!---->
  
  <!---->
  <span
    class="v-card__underlay"
  />
  
</div>
`;
